[project]
name = "refnopaym"
version = "0.1.0"
description = ""
authors = [
    {name = "Eder Velázquez",email = "edervzz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-swagger-ui (>=5.21.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
